First draft for linking digital content into the thesis
Proposed as an additional title page

--- a/_thesis_DE.tex
+++ b/_thesis_DE.tex
@@ -23,6 +23,7 @@
 \programname{Universal Computing}
 \placeofstudy{Hagenberg}
 \dateofsubmission{2017}{02}{28}	% {YYYY}{MM}{DD}
+\digitalcontent{http://link.to/a-path-with-a/digital-document.zip}
 
 %%% Zusätzlich für eine Bachelorarbeit: ---------------------
 \thesisnumber{XXXXXXXXXX-A}   % Stud-ID, z.B. 1310238045-A  
