First suggestion for reduction
Things that could be moved to the wiki are commented out.
Comments beginning with %%% are relevant to the reduction.

--- a/_thesis_DE.tex
+++ b/_thesis_DE.tex
@@ -66,9 +66,13 @@
 \appendix                                            % Anhang 
 %%%----------------------------------------------------------
 
-\include{thesis_DE/back/anhang_a}	% Technische Ergänzungen
+%%% Move to wiki
+% Reason: Package and software specific informations
+%\include{thesis_DE/back/anhang_a}	% Technische Ergänzungen
 \include{thesis_DE/back/anhang_b}	% Inhalt der CD-ROM/DVD
-\include{thesis_DE/back/anhang_c}	% Chronologische Liste der Änderungen
+%%% Move to wiki
+% Reason: Put the changelog in a wiki page
+%\include{thesis_DE/back/anhang_c}	% Chronologische Liste der Änderungen
 \include{thesis_DE/back/anhang_d}	% Quelltext dieses Dokuments
 
 %%%----------------------------------------------------------
