Initial modifications to APA style.

--- a/references.bib
+++ b/references.bib
@@ -23,7 +23,7 @@
 
 @manual{Bezos2016,
 	author={Bezos, Javier and Braams, Johannes L.},
-	title={Babel -- Multilingual support for Plain \TeX\ or \LaTeX},
+	title={Babel -- Multilingual support for Plain TeX or \LaTeX},
 	year={2016},
 	month={4},
 	version={3.9r},
