--- a/thesis_DE/front/kurzfassung.tex
+++ b/thesis_DE/front/kurzfassung.tex
@@ -17,9 +17,7 @@ normalerweise \emph{keine Literaturverweise} verwendet! Falls
 unbedingt solche benötigt werden -- etwa weil die Arbeit eine
 Weiterentwicklung einer bestimmten, früheren Arbeit darstellt --,
 dann sind \emph{vollständige} Quellenangaben in der Kurzfassung
-selbst notwendig, \zB %
-[\textsc{Zobel} J.: \textit{Writing for Computer Science -- The Art of
-Effective Commu\-nica\-tion}. Springer-Verlag, Singa\-pur, 1997].
+selbst notwendig, \zB (\fullcite{BurgerBurge2015}).
 
 Auch sollte daran gedacht werden, dass bei der Aufnahme in Datenbanken
 Sonderzeichen oder etwa Aufzählungen mit "`Knödellisten"' in der
