--- a/hgbbib.sty
+++ b/hgbbib.sty
@@ -12,9 +12,16 @@
 \usepackage{csquotes}				% recommended for biblatex
 
 %Note: biblatex with bibtex backend is frozen at version 1.7.
-\usepackage[style=numeric-comp,backend=biber,bibencoding=auto]{biblatex}
+\usepackage[style=apa,backend=biber,bibencoding=auto]{biblatex}
+\ifthenelse{\equal{\hgb@MainLanguage}{german}}%
+	{\DeclareLanguageMapping{ngerman}{ngerman-apa}}{}
+\ifthenelse{\equal{\hgb@MainLanguage}{english}}%
+	{\DeclareLanguageMapping{american}{american-apa}}{}
 
-\ExecuteBibliographyOptions{bibwarn=true,sortcites=true,defernumbers=true,isbn=false,doi=false,backref=true}
+
+
+
+\ExecuteBibliographyOptions{bibwarn=true,sortcites=true,defernumbers=true,isbn=false,doi=false,apabackref=true}
 
 %% titles of reference section + 3 categories of references:
 \newcommand{\@bibtitle}{Quellenverzeichnis}
