Switched everything to APA style
Lots of changes. Interesting but maybe hard to maintain for students.

--- a/_lab_report_DE.tex
+++ b/_lab_report_DE.tex
@@ -56,7 +56,7 @@ Das umfasst \ia
 	Ansatz der eigenen Lösung, Strukturierung, Betrachtung von Alternativen, Skizzen;
 \item
 	wichtige Details (Mathematik, Algorithmen, konkrete Implementierungsdetails,
-	Quellen \cite{Sedgewick2011} % nur als Beispiel
+	Quellen \parencite{Sedgewick2011} % nur als Beispiel
 	etc.);
 \item
 	Tests, Beispiele, Angaben zur Performance;
