--- a/_termreport_EN.tex
+++ b/_termreport_EN.tex
@@ -68,7 +68,7 @@ Be creative when it comes to designing tests and selecting good examples.
 \end{center}
 %
 By the way, all you ever need to know about algorithms can be 
-found in \cite{Sedgewick2011}.%
+found in \parencite{Sedgewick2011}.%
 \footnote{This should only produce a citation so the bibliography is not empty.} 
 
 
