--- a/hgbbib.sty
+++ b/hgbbib.sty
@@ -17,7 +17,7 @@
 	{\DeclareLanguageMapping{ngerman}{ngerman-apa}}{}
 \ifthenelse{\equal{\hgb@MainLanguage}{english}}%
 	{\DeclareLanguageMapping{american}{american-apa}}{}
-
+\urlstyle{sf}
 
 
 
