--- a/references.bib
+++ b/references.bib
@@ -158,6 +158,7 @@
 		Angleichung der Rechtsvorschriften der Mitgliedstaaten über umweltbelastende Geräuschemissionen 
 		von zur Verwendung im Freien vorgesehenen Geräten und Maschinen},
 	howpublished={Amtsblatt der Europäischen Gemeinschaften, L 162},
+	year={2000},
 	url={http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CONSLEG:2000L0014:20051227:de:PDF},
 	hyphenation={german}
 }
@@ -181,6 +182,7 @@
 @misc{FhStG1993,
 	title={Bundesgesetz über Fachhochschul-Studiengänge},
 	howpublished={BGBl.\ Nr.\ 340/1993, zuletzt geändert mit Bundesgesetz BGBl.\ I Nr.\ 45/2014},
+	year={1994},
 	url={https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=10009895},
 	hyphenation={german}
 }
@@ -236,6 +238,9 @@
 }
 
 @online{IBM360,
+	author={Markiewicz, Pete},
+	title={Plyojump -- Computer History},
+	year={2017},
 	url={http://www.plyojump.com/classes/mainframe_era.php}
 }
 
@@ -406,6 +411,7 @@
 }
 
 @online{WikiReliquienschrein2016,
+	author={Wikipedia},
 	url={https://de.wikipedia.org/wiki/Reliquienschrein},
 	year={2016},
 	month={8},
