Try IEEE style (alphabetic)
To use the numeric IEEE style, switch to the commented line in
hgbbib.sty.

--- a/references.bib
+++ b/references.bib
@@ -23,7 +23,7 @@
 
 @manual{Bezos2016,
 	author={Bezos, Javier and Braams, Johannes L.},
-	title={Babel -- Multilingual support for Plain \TeX\ or \LaTeX},
+	title={Babel -- Multilingual support for Plain TeX or \LaTeX},
 	year={2016},
 	month={4},
 	version={3.9r},
@@ -157,6 +157,7 @@
 	title={Richtline 2000/14/EG des Europäischen Parlaments und des Rates vom 8.\ Mai 2000 zur 
 		Angleichung der Rechtsvorschriften der Mitgliedstaaten über umweltbelastende Geräuschemissionen 
 		von zur Verwendung im Freien vorgesehenen Geräten und Maschinen},
+	year={2000},
 	howpublished={Amtsblatt der Europäischen Gemeinschaften, L 162},
 	url={http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CONSLEG:2000L0014:20051227:de:PDF},
 	hyphenation={german}
@@ -179,8 +180,10 @@
 }
 
 @misc{FhStG1993,
+	label={FhStG},
 	title={Bundesgesetz über Fachhochschul-Studiengänge},
 	howpublished={BGBl.\ Nr.\ 340/1993, zuletzt geändert mit Bundesgesetz BGBl.\ I Nr.\ 45/2014},
+	year={1993},
 	url={https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=10009895},
 	hyphenation={german}
 }
@@ -228,6 +231,7 @@
 }
 
 @online{HistoryOfComputers2008,
+	label={His},
 	title={History of Computers},
 	year={2008},
 	month={9},
@@ -236,6 +240,9 @@
 }
 
 @online{IBM360,
+	author={Markiewicz, Pete},
+	title={Plyojump -- Computer History},
+	year={2017},
 	url={http://www.plyojump.com/classes/mainframe_era.php}
 }
 
@@ -313,6 +320,7 @@
 }
 
 @movie{Nosferatu1922,
+	label={Nos},
 	title={Nosferatu -- A Symphony of Horrors},
 	howpublished={Film},
 	year={1922},
@@ -332,7 +340,9 @@
 }
 
 @misc{OoeRaumordnungsgesetz1994,
+	label={OÖRG},
 	title={Oberösterreichisches Raumordnungsgesetz 1994},
+	year={1994},
 	howpublished={LGBl 1994/114 idF 1995/93},
 	url={http://www.ris.bka.gv.at/Dokumente/LrOO/LOO40007538/LOO40007538.pdf},
 	hyphenation={german}
@@ -366,6 +376,7 @@
 }
 
 @movie{Psycho1960,
+	label={Psy},
 	title={Psycho},
 	howpublished={Film},
 	year={1960},
@@ -384,6 +395,16 @@
 	version={2.5e},
 	url={http://mirrors.ctan.org/language/german/gerdoc.pdf},
 	hyphenation={german}
+}
+
+@book{Sedgewick2011,
+	author={Sedgewick, Robert and Wayne, Kevin},
+	title={Algorithms},
+	publisher={Addison-Wesley},
+	location={Reading, MA},
+	year={2011},
+	edition={4},
+	hyphenation={english}
 }
 
 @manual{Sommerfeldt2011,
@@ -406,6 +427,7 @@
 }
 
 @online{WikiReliquienschrein2016,
+	label={Wik},
 	url={https://de.wikipedia.org/wiki/Reliquienschrein},
 	year={2016},
 	month={8},
@@ -419,15 +441,5 @@
 	year={1995},
 	month={5},
 	note={Rykodisc, New York},
-	hyphenation={english}
-}
-
-@book{Sedgewick2011,
-	author={Sedgewick, Robert and Wayne, Kevin},
-	title={Algorithms},
-	publisher={Addison-Wesley},
-	location={Reading, MA},
-	year={2011},
-	edition={4},
 	hyphenation={english}
 }
