--- a/hgbbib.sty
+++ b/hgbbib.sty
@@ -12,7 +12,8 @@
 \usepackage{csquotes}				% recommended for biblatex
 
 %Note: biblatex with bibtex backend is frozen at version 1.7.
-\usepackage[style=numeric-comp,backend=biber,bibencoding=auto]{biblatex}
+%\usepackage[style=ieee,backend=biber,bibencoding=auto]{biblatex}
+\usepackage[style=ieee-alphabetic,backend=biber,bibencoding=auto]{biblatex}
 
 \ExecuteBibliographyOptions{bibwarn=true,sortcites=true,defernumbers=true,isbn=false,doi=false,backref=true}
 
