--- a/examples/BeamerExample/main.tex
+++ b/examples/BeamerExample/main.tex
@@ -1,6 +1,6 @@
+%% based on https://www.overleaf.com/latex/templates/beamer-presentation/zxrfltwmbcrt
 \documentclass[
 	hyperref={unicode},	%% must match the hyperref options used by hgb.sty (overrule with hypersetup below)
-	url={hyphens},
 	english
 	]{beamer}
 %
@@ -23,9 +23,9 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage{hgb}
-\RequirePackage{hgbmath}
-\RequirePackage{hgbabbrev}
-\RequirePackage{hgblistings}
+\usepackage{hgbmath}
+\usepackage{hgbabbrev}
+\usepackage{hgblistings}
 
 \hypersetup{
 	colorlinks = true,	% use colored links (no boxes)	
@@ -36,6 +36,8 @@
 \setitemize{label=\usebeamerfont*{itemize item}%
   \usebeamercolor[fg]{itemize item}
   \usebeamertemplate{itemize item}}
+	
+	
 
 \title[Your Short Title]{Title of Your Presentation}
 \author{Your Name}
@@ -56,6 +58,11 @@
 \section{Introduction}
 
 \begin{frame}{Introduction}
+This is a demo presentation based on the popular \texttt{\color{fg}beamer}
+\texttt{\usebeamercolor[fg]{alerted text}beamer}
+class.%
+\footnote{\url{https://ctan.org/tex-archive/macros/latex/contrib/beamer}}
+It ...
 
 \begin{itemize}
   \item Your introduction goes here!
@@ -105,13 +112,14 @@ Gadgets & 13
 
 \begin{frame}{Readable Mathematics}
 
-Let $X_0, X_1, \ldots, X_{n-1}$ be a sequence of $n$ independent and identically distributed random variables, with $\mathrm{E}[X_i] = \mu$ and $\mathrm{Var}[X_i] = \sigma^2 < \infty$, and let
+Let $(X_0, X_1, \ldots, X_{n-1})$ be a sequence of $n$ independent and identically distributed random variables, with $\mathrm{E}[X_i] = \mu$ and $\mathrm{Var}[X_i] = \sigma^2 < \infty$, and let
 \begin{equation}
 S_n = \frac{X_0 + X_1 + \cdots + X_n}{n-1}
       = \frac{1}{n} \cdot\sum_{i=0}^{n-1} X_i
 \label{eq:Mean}
 \end{equation}
-denote their \emph{mean}. Then as $n$ approaches infinity, the random variables $\sqrt{n} \cdot(S_n - \mu)$ converge 
+denote their \emph{mean}. Then as $n$ approaches infinity, the random variable 
+$\sqrt{n} \cdot(S_n - \mu)$ converges
 to a normal distribution $\mathcal{N}(0, \sigma^2)$.
 
 \end{frame}
